fix dark mode

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -23,7 +23,6 @@
   --color-foreground-muted: #72747e;
   --color-foreground-border: #878787;
 
-  --color-background-primary: white;
   --color-background-secondary: #f8f9fb;
   --color-background-hover: #efeff4ff;
   --color-background-hover--transparent: #efeff400;
